# RosBridge_Ros

./: README.md  RosBridge Manual.pptx
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: rosbridge_ros.pc
devel/lib/rosbridge_ros/: tfoi_node
devel/share/rosbridge_ros/cmake/: rosbridge_rosConfig.cmake
ros_opencv/: CMakeLists.txt  README.md  package.xml
ros_opencv/include/cmd_vel/: cmd_vel_class.h
ros_opencv/include/ros_opencv/: image_class.h
ros_opencv/src/: can_msg_class.cpp  cmd_vel_class.cpp  image_class.cpp  main.cpp
src/rosbridge_ros/: CMakeLists.txt
src/rosbridge_ros/include/: can_msg_class.h
src/rosbridge_ros/launch/: integration.launch
src/rosbridge_ros/src/: can_msg_class.cpp  cmd_vel_class.cpp  image_class.cpp  main.cpp
